--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,43 @@
 version: '3.9'
 
 services:
+  # PostgreSQL Database
   db:
     image: postgres:15-alpine
-    environment:
-      POSTGRES_DB: instantmusic
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+    container_name: instantmusic_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=instantmusic
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
+  # Redis (Cache & WebSocket Broker)
   redis:
     image: redis:7-alpine
+    container_name: instantmusic_redis
     ports:
       - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
+  # Django Backend
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    container_name: instantmusic_backend
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./backend:/app
       - static_volume:/app/staticfiles
@@ -30,13 +47,60 @@ services:
     env_file:
       - ./backend/.env
     depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      - DEBUG=True
+      - POSTGRES_HOST=db
+      - REDIS_URL=redis://redis:6379/0
+
+  # Celery Worker (Async Tasks)
+  celery:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: instantmusic_celery
+    command: celery -A config worker -l info
+    volumes:
+      - ./backend:/app
+    env_file:
+      - ./backend/.env
+    depends_on:
       - db
       - redis
+    environment:
+      - DEBUG=True
+      - POSTGRES_HOST=db
+      - REDIS_URL=redis://redis:6379/0
 
+  # Celery Beat (Scheduled Tasks)
+  celery-beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: instantmusic_celery_beat
+    command: celery -A config beat -l info
+    volumes:
+      - ./backend:/app
+    env_file:
+      - ./backend/.env
+    depends_on:
+      - db
+      - redis
+    environment:
+      - DEBUG=True
+      - POSTGRES_HOST=db
+      - REDIS_URL=redis://redis:6379/0
+
+  # React Frontend
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    container_name: instantmusic_frontend
+    command: npm run dev
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -46,6 +110,9 @@ services:
       - ./frontend/.env
     depends_on:
       - backend
+    environment:
+      - VITE_API_URL=http://localhost:8000
+      - VITE_WS_URL=ws://localhost:8000
 
 volumes:
   postgres_data:
