INMU-4 Correction .env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,9 +14,9 @@ POSTGRES_PORT=5432
 REDIS_URL=redis://redis:6379/0
 
 # Spotify
-SPOTIFY_CLIENT_ID=your-client-id
-SPOTIFY_CLIENT_SECRET=your-client-secret
+SPOTIFY_CLIENT_ID=your-client-id --- IGNORE ---
+SPOTIFY_CLIENT_SECRET=your-client-secret --- IGNORE ---
 
 # Google OAuth
-GOOGLE_OAUTH_CLIENT_ID=your-google-id
-GOOGLE_OAUTH_CLIENT_SECRET=your-google-secret
+GOOGLE_OAUTH_CLIENT_ID=your-google-id --- IGNORE ---
+GOOGLE_OAUTH_CLIENT_SECRET=your-google-secret --- IGNORE ---
