INMU-7 Correction websocket

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: instantmusic_backend
-    command: python manage.py runserver 0.0.0.0:8000
+    command: daphne -b 0.0.0.0 -p 8000 config.asgi:application
     volumes:
       - ./backend:/app
       - static_volume:/app/staticfiles
