INMU-9 Lancement partie

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,18 +13,12 @@ POSTGRES_PORT=5432
 # Redis
 REDIS_URL=redis://redis:6379/0
 
-# Spotify API (Client Credentials - fallback mode)
-SPOTIFY_CLIENT_ID=your-client-id
-SPOTIFY_CLIENT_SECRET=your-client-secret
-
-# Spotify OAuth 2.0 (for full playlist access)
-# Get these from: https://developer.spotify.com/dashboard
-SPOTIFY_REDIRECT_URI=http://localhost:8000/api/playlists/spotify/callback/
-# For production: https://your-domain.com/api/playlists/spotify/callback/
+# YouTube API
+# Add your YouTube Data API v3 key here (create in Google Cloud Console)
+YOUTUBE_API_KEY=example-youtube-api-key
 
 # Frontend URL (for OAuth redirects)
-FRONTEND_URL=http://localhost:5173
-# For production: https://your-frontend-domain.com
+FRONTEND_URL=http://127.0.0.1:3000
 
 # Google OAuth
 GOOGLE_OAUTH_CLIENT_ID=your-google-id
