--- a/_devops/docker/docker-compose.prod.yml
+++ b/_devops/docker/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   db:
@@ -11,7 +9,7 @@ services:
       - .env.prod
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -24,7 +22,7 @@ services:
     container_name: instantmusic_redis_prod
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ['CMD', 'redis-cli', 'ping']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -34,7 +32,7 @@ services:
   # Django Backend
   backend:
     build:
-      context: ./backend
+      context: ../../backend
       dockerfile: Dockerfile.prod
     container_name: instantmusic_backend_prod
     command: daphne -b 0.0.0.0 -p 8000 config.asgi:application
@@ -42,7 +40,7 @@ services:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     expose:
-      - "8000"
+      - '8000'
     env_file:
       - ./.env.prod
     depends_on:
@@ -57,7 +55,7 @@ services:
   # Celery Worker (Async Tasks)
   celery:
     build:
-      context: ./backend
+      context: ../../backend
       dockerfile: Dockerfile.prod
     container_name: instantmusic_celery_prod
     command: celery -A config worker -l info
@@ -75,7 +73,7 @@ services:
   # Celery Beat (Scheduled Tasks)
   celery-beat:
     build:
-      context: ./backend
+      context: ../../backend
       dockerfile: Dockerfile.prod
     container_name: instantmusic_celery_beat_prod
     command: celery -A config beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
@@ -93,7 +91,7 @@ services:
   # React Frontend (Build + Nginx)
   frontend:
     build:
-      context: ./frontend
+      context: ../../frontend
       dockerfile: Dockerfile.prod
       args:
         - VITE_API_URL=${VITE_API_URL}
@@ -108,13 +106,13 @@ services:
     image: nginx:alpine
     container_name: instantmusic_nginx_prod
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - static_volume:/app/staticfiles:ro
       - media_volume:/app/media:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ../../nginx/ssl:/etc/nginx/ssl:ro
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     depends_on:
       - backend
       - frontend
