--- a/_devops/docker/docker-compose.yml
+++ b/_devops/docker/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     ports:
-      - "5432:5432"
+      - '5433:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -22,9 +22,9 @@ services:
     image: redis:7-alpine
     container_name: instantmusic_redis
     ports:
-      - "6379:6379"
+      - '6379:6379'
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ['CMD', 'redis-cli', 'ping']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -32,18 +32,18 @@ services:
   # Django Backend
   backend:
     build:
-      context: ./backend
+      context: ../../backend
       dockerfile: Dockerfile
     container_name: instantmusic_backend
     command: daphne -b 0.0.0.0 -p 8000 config.asgi:application
     volumes:
-      - ./backend:/app
+      - ../../backend:/app
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     ports:
-      - "8000:8000"
+      - '8000:8000'
     env_file:
-      - ./backend/.env
+      - ../../backend/.env
     depends_on:
       db:
         condition: service_healthy
@@ -57,14 +57,14 @@ services:
   # Celery Worker (Async Tasks)
   celery:
     build:
-      context: ./backend
+      context: ../../backend
       dockerfile: Dockerfile
     container_name: instantmusic_celery
     command: celery -A config worker -l info
     volumes:
-      - ./backend:/app
+      - ../../backend:/app
     env_file:
-      - ./backend/.env
+      - ../../backend/.env
     depends_on:
       - db
       - redis
@@ -76,14 +76,14 @@ services:
   # Celery Beat (Scheduled Tasks)
   celery-beat:
     build:
-      context: ./backend
+      context: ../../backend
       dockerfile: Dockerfile
     container_name: instantmusic_celery_beat
     command: celery -A config beat -l info
     volumes:
-      - ./backend:/app
+      - ../../backend:/app
     env_file:
-      - ./backend/.env
+      - ../../backend/.env
     depends_on:
       - db
       - redis
@@ -95,17 +95,17 @@ services:
   # React Frontend
   frontend:
     build:
-      context: ./frontend
+      context: ../../frontend
       dockerfile: Dockerfile
     container_name: instantmusic_frontend
     command: npm run dev
     volumes:
-      - ./frontend:/app
+      - ../../frontend:/app
       - /app/node_modules
     ports:
-      - "3000:3000"
+      - '3000:3000'
     env_file:
-      - ./frontend/.env
+      - ../../frontend/.env
     depends_on:
       - backend
     environment:
