--- a/_devops/docker/docker-compose.prod.yml
+++ b/_devops/docker/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
       - .env.prod
     restart: unless-stopped
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      test: ['CMD-SHELL', 'pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB']
       interval: 10s
       timeout: 5s
       retries: 5
