--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,10 +46,17 @@ http {
         server frontend:80;
     }
 
-    # HTTP server (redirect to HTTPS in production)
+    # Redirect www → non-www
     server {
         listen 80;
-        server_name _;
+        server_name www.benoftheworld.fr;
+        return 301 http://benoftheworld.fr$request_uri;
+    }
+
+    # Main HTTP server
+    server {
+        listen 80;
+        server_name benoftheworld.fr localhost _;
 
         # Uncomment for production with SSL
         # return 301 https://$server_name$request_uri;
@@ -114,7 +121,7 @@ http {
     # HTTPS server (uncomment and configure for production)
     # server {
     #     listen 443 ssl http2;
-    #     server_name your-domain.com;
+    #     server_name benoftheworld.fr;
     #
     #     ssl_certificate /etc/nginx/ssl/cert.pem;
     #     ssl_certificate_key /etc/nginx/ssl/key.pem;
