--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,22 +46,33 @@ http {
         server frontend:80;
     }
 
-    # Redirect www → non-www
+    # Redirect all HTTP (www and non-www) → HTTPS non-www
     server {
         listen 80;
-        server_name www.benoftheworld.fr;
-        return 301 http://benoftheworld.fr$request_uri;
+        server_name benoftheworld.fr www.benoftheworld.fr;
+        return 301 https://benoftheworld.fr$request_uri;
     }
 
-    # Main HTTP server
+    # Main HTTPS server (cert only covers benoftheworld.fr)
     server {
-        listen 80;
-        server_name benoftheworld.fr localhost _;
+        listen 443 ssl http2;
+        server_name benoftheworld.fr;
 
-        # Uncomment for production with SSL
-        # return 301 https://$server_name$request_uri;
+        # SSL — Let's Encrypt certificates (placed in nginx/ssl/ on the host)
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
-        # For development/testing without SSL:
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
         location / {
             proxy_pass http://frontend_app;
             proxy_set_header Host $host;
@@ -81,7 +92,7 @@ http {
             proxy_redirect off;
         }
 
-        # WebSocket support
+        # WebSocket support (wss://)
         location /ws/ {
             proxy_pass http://backend;
             proxy_http_version 1.1;
@@ -108,7 +119,7 @@ http {
             add_header Cache-Control "public";
         }
 
-        # Django admin static files
+        # Django admin
         location /admin/ {
             proxy_pass http://backend;
             proxy_set_header Host $host;
@@ -117,19 +128,4 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
-
-    # HTTPS server (uncomment and configure for production)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name benoftheworld.fr;
-    #
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers HIGH:!aNULL:!MD5;
-    #     ssl_prefer_server_ciphers on;
-    #
-    #     # Same location blocks as HTTP server above
-    #     # ...
-    # }
 }
