INMU-23 Correction SSL

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,7 +55,8 @@ http {
 
     # Main HTTPS server (cert only covers benoftheworld.fr)
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name benoftheworld.fr;
 
         # SSL — Let's Encrypt certificates (placed in nginx/ssl/ on the host)
